fixed spacing

--- a/css/main.scss
+++ b/css/main.scss
@@ -37,7 +37,7 @@ $breakpoint3: 375px;
 }
 
 body{
-  padding-top: 109px;
+  padding-top: 72px;
   background: #fff;
   color: #333;
   margin: 0;
@@ -52,6 +52,19 @@ body{
 .display-text{
   font-size: 40px;
   line-height: 56px;
+  margin: 32px 0;
+
+  &.dark{
+    color: $black-color;
+  }
+
+  &.light{
+    color: #fff;
+  }
+
+  &.center{
+    text-align: center;
+  }
 }
 
 h1{
@@ -149,17 +162,17 @@ h1,h2,h3,h4,h5,h6{
   animation-duration: 1s;
   text-align: center;
   // padding: 2em 0;
-  margin-bottom: 32px;
+  // margin-bottom: 32px;
   // margin-top: -10px;
 
   h1{
-    color: #333;
+    // color: #333;
     // letter-spacing: -2px;
-    width: 800px;
-    max-width: 100%;
-    text-transform: capitalize;
+    // width: 800px;
+    // max-width: 100%;
+    // text-transform: capitalize;
     // font-weight: 700;
-    margin: 0 auto;
+    // margin: 0 auto;
     // font-size: 40px;
 
     @media(max-width: $breakpoint3){
@@ -460,7 +473,7 @@ h1,h2,h3,h4,h5,h6{
    border-radius: 3px;
     -webkit-border-radius: 3px;
    position: relative;
-   margin: 0 0 30px 0;
+   margin: 0 0 24px 0;
   //  display: inline-block;
 
    @media (max-width: $breakpoint2){
